article/thinkit-smallplatform/05-observability/deploy/backstage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage-route
  namespace: backstage
spec:
  hostnames:
  - backstage.10.50.1.5.nip.io
  parentRefs:
    - name: shared-gateway
      namespace: shared-gateway
      sectionName: backstage
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backstage
          port: 8080
          kind: Service
          weight: 1
